<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Climbing Guide</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="sector">Sector</string>
    <string name="update">Update</string>
    <string name="Update">Update</string>
    <string name="create">Create</string>
    <string name="search">Search</string>
    <string name="search_hint">Search</string>
    <string name="large_text">Large Text</string>
    <string name="difficulty_">"Difficulty: "</string>
    <string name="length_">"Length: "</string>
    <string name="bolts_">"Bolts: "</string>
    <string name="latitude">"Latitude: "</string>
    <string name="longitude">"Longitude: "</string>

    <string name="action_update">Update</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="newRoute">Create new route</string>
    <string name="newArea">Create new area</string>
    <string name="newSector">Create new sector</string>
    <string name="routeName">Route name:</string>
    <string name="routeSector">In sector:</string>
    <string name="routeDiff">Difficulty of route:</string>
    <string name="routeLength">Length of route:</string>
    <string name="routeBolts">Number of bolts:</string>
    <string name="send">Send</string>
    <string name="sectorName">Sector name</string>
    <string name="sectorArea">In area</string>
    <string name="areaName">Area name</string>


    <string-array name="nav_drawer_items">
        <item >Areas</item>
        <item >Sectors</item>
        <item >Routes</item>
        <item >Create</item>
        <item >Update</item>
        <item >GPS</item>
    </string-array>

    <array name="nav_drawer_icons">
        <item>@drawable/ic_routes</item>
        <item>@drawable/ic_sectors</item>
        <item>@drawable/ic_areas</item>
        <item>@drawable/ic_create</item>
        <item>@drawable/ic_update</item>
    </array>

       <string name="desc_list_item_icon">Item Icon</string>
</resources>
