<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewRouteName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/routeName" />

    <EditText
        android:id="@+id/editTextRouteName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textCapSentences" />

    <TextView
        android:id="@+id/textViewInSector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/routeSector" />

    <EditText
        android:id="@+id/editTextInSector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/textViewRouteDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/routeDiff" />

    <EditText
        android:id="@+id/editTextRouteDifficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/textViewRouteLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/routeLength" />

    <EditText
        android:id="@+id/editTextRouteLength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textViewBoltsCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/routeBolts" />

    <EditText
        android:id="@+id/editTextBoltsCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send" />

</LinearLayout>
